# Weather_API_ETL

./: README.md  pyproject.toml
result/: backup.db  weather.db  weather.json
schema/: response_description.txt
src/: database.py  main.py  utilities.py
