[tool.poetry]
name = "weather_api_etl"
version = "0.0.1"
description = ""
authors = ["Lu The Vy <luthevy2001@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.28.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
